Move src to restful module.

--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ fabric.properties
 ### Gradle template
 .gradle
 **/build/
-!src/**/build/
+!restful/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
