--- a/restful/build.gradle
+++ b/restful/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
     implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
+    implementation(project(':DiContainer'))
 }
 
 test {
